--- a/courseinfo/src/index.html
+++ b/courseinfo/src/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root">not rendered</div>
-    <script type="module" src="./index.jsx"></script>
+    <script type="module" src="./main.jsx"></script>
   </body>
 </html>
